@@ -21,6 +21,7 @@ import uk.gov.hmcts.reform.sscs.ccd.domain.CollectionItem;
 import uk.gov.hmcts.reform.sscs.ccd.domain.PanelMember;
 import uk.gov.hmcts.reform.sscs.ccd.domain.PanelMemberExclusions;
 import uk.gov.hmcts.reform.sscs.ccd.domain.PanelMemberMedicallyQualified;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SessionCategory;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.model.client.JudicialUserBase;
 import uk.gov.hmcts.reform.sscs.model.hmc.reference.RequirementType;
@@ -28,27 +29,27 @@ import uk.gov.hmcts.reform.sscs.model.single.hearing.MemberType;
 import uk.gov.hmcts.reform.sscs.model.single.hearing.PanelPreference;
 import uk.gov.hmcts.reform.sscs.model.single.hearing.PanelRequirements;
 import uk.gov.hmcts.reform.sscs.reference.data.model.SessionCategoryMap;
-import uk.gov.hmcts.reform.sscs.reference.data.service.PanelCategoryService;
+import uk.gov.hmcts.reform.sscs.reference.data.service.PanelCompositionService;
 import uk.gov.hmcts.reform.sscs.service.holder.ReferenceDataServiceHolder;
 
 @Slf4j
 @Component
 public final class HearingsPanelMapping {
 
-    private final PanelCategoryService panelCategoryService;
+    private final PanelCompositionService panelCompositionService;
 
     @Value("${feature.default-panel-comp.enabled}")
     private boolean defaultPanelCompEnabled;
 
-    HearingsPanelMapping(PanelCategoryService panelCategoryService) {
+    HearingsPanelMapping(PanelCompositionService panelCompositionService) {
 
-        this.panelCategoryService = panelCategoryService;
+        this.panelCompositionService = panelCompositionService;
     }
 
     public PanelRequirements getPanelRequirements(SscsCaseData caseData,
                                                          ReferenceDataServiceHolder refData) {
         return PanelRequirements.builder()
-                .roleTypes(defaultPanelCompEnabled ? panelCategoryService.getRoleTypes(caseData) : findRoleTypesByBenefitCode(caseData.getBenefitCode()))
+                .roleTypes(defaultPanelCompEnabled ? panelCompositionService.getRoleTypes(caseData) : findRoleTypesByBenefitCode(caseData.getBenefitCode()))
                 .authorisationTypes(getAuthorisationTypes())
                 .authorisationSubTypes(getAuthorisationSubTypes())
                 .panelPreferences(getPanelPreferences(caseData))
@@ -118,7 +119,7 @@ public final class HearingsPanelMapping {
                 .build();
     }
 
-    public static List<String> getPanelSpecialisms(@Valid SscsCaseData caseData, SessionCategoryMap sessionCategoryMap) {
+    public List<String> getPanelSpecialisms(@Valid SscsCaseData caseData, SessionCategoryMap sessionCategoryMap) {
         List<String> panelSpecialisms = new ArrayList<>();
 
         if (isNull(sessionCategoryMap)) {
@@ -131,11 +132,21 @@ public final class HearingsPanelMapping {
 
         String doctorSpecialism = caseData.getSscsIndustrialInjuriesData().getPanelDoctorSpecialism();
         String doctorSpecialismSecond = caseData.getSscsIndustrialInjuriesData().getSecondPanelDoctorSpecialism();
-        panelSpecialisms = sessionCategoryMap.getCategory().getPanelMembers().stream()
-                .map(panelMember -> getPanelMemberSpecialism(panelMember, doctorSpecialism, doctorSpecialismSecond))
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-        return panelSpecialisms;
+        if (defaultPanelCompEnabled) {
+            panelSpecialisms = SessionCategory.getSessionCategory(panelCompositionService
+                            .getDefaultPanelComposition(caseData)
+                            .getCategory()).getPanelMembers().stream()
+                    .map(panelMember -> getPanelMemberSpecialism(panelMember, doctorSpecialism, doctorSpecialismSecond))
+                    .filter(Objects::nonNull)
+                    .toList();
+            return panelSpecialisms;
+        } else {
+            panelSpecialisms = sessionCategoryMap.getCategory().getPanelMembers().stream()
+                    .map(panelMember -> getPanelMemberSpecialism(panelMember, doctorSpecialism, doctorSpecialismSecond))
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+            return panelSpecialisms;
+        }
     }
 
     public static String getPanelMemberSpecialism(PanelMember panelMember,
